<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:descendantFocusability="blocksDescendants"
        android:padding="16dp"
        tools:context=".ui.detail.DetailCatalogueActivity">

        <ImageView
            android:id="@+id/iv_detail_image"
            android:layout_width="230dp"
            android:layout_height="300dp"
            android:layout_marginEnd="100dp"
            android:src="@color/teal_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/rate"
            android:layout_width="97dp"
            android:layout_height="71dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="6dp"
            android:gravity="center"
            android:textSize="25sp"
            app:drawableStartCompat="@drawable/ic_star"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.28"
            app:layout_constraintStart_toEndOf="@+id/iv_detail_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.176"
            tools:text="@string/rating" />

        <TextView
            android:layout_width="104dp"
            android:layout_height="32dp"
            android:layout_marginStart="12dp"
            android:gravity="center_vertical|start"
            android:text="@string/description"
            android:textColor="@color/teal_700"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.012"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_detail_image"
            app:layout_constraintVertical_bias="0.129" />

        <TextView
            android:id="@+id/tv_detail_description"
            android:layout_width="362dp"
            android:layout_height="305dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="84dp"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_detail_image" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:backgroundTint="@color/white"
            android:clickable="true"
            app:layout_constraintBottom_toTopOf="@+id/progress_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.431"
            app:layout_constraintStart_toEndOf="@+id/iv_detail_image"
            app:layout_constraintTop_toBottomOf="@+id/rate"
            app:layout_constraintVertical_bias="0.761"
            android:contentDescription="@string/favorite_button"
            android:focusable="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>